<?xml version="1.0"?>
<resources>
    <string name="app_name" translatable="false">AdGuard Content Blocker</string>
    <string name="refresh">Refresh</string>
    <string name="please_wait">Please wait...</string>
    <string name="main_info">This application is an extension for browsers that support content-blocking.\n\nCurrently there are two such browsers:\n\n1. Samsung Internet Browser\n2. Yandex Browser\n\nWith the help of this application ,you can block all advertisements in these browsers.\n\nAlso, you can select which filters to use in Settings.</string>
    <string name="progressGenericErrorText">Some error occurred!</string>
    <string name="importUserRulesSuccessResultMessage">{0} filter(s) imported successfully!</string>
    <string name="importUserRulesErrorResultMessage">Error importing filters!</string>
    <string name="importUserRulesProgressDialogTitle">Import in progress</string>
    <string name="importUserRulesProgressDialogMessage">Loading…</string>
    <string name="checkUpdatesProgressDialogTitle">Checking for updates</string>
    <string name="checkUpdatesProgressDialogMessage">Checking for updates. Please wait…</string>
    <string name="checkUpdatesErrorResultMessage">Update failed. Please try again later.</string>
    <string name="checkUpdatesZeroResultMessage">You are using the most recent version of filters.</string>
    <string name="checkUpdatesOneResultMessage">One filter has been updated:{0}</string>
    <string name="checkUpdatesManyResultMessage">{0} filters have been updated:{1}</string>
    <string name="action_settings">Settings</string>
    <string name="openned_drawer_title">Options</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="pref_autoupdate_filters">Auto-update filters</string>
    <string name="pref_summary_autoupdate_filters">Update filters automatically</string>
    <string name="pref_update_wifi_only">Update only over Wi-Fi</string>
    <string name="pref_summary_update_wifi_only">AdGuard will get filter updates only over Wi-Fi.</string>
    <string name="pref_show_useful_ads">Show useful ads</string>
    <string name="pref_summary_show_useful_ads">Unblocks ads that can be useful to users.</string>
    <string name="pref_filters_category">Filters</string>
    <string name="pref_summary_filters_category">Select what filters to use</string>
    <string name="filters">Filters</string>
    <string name="stats_enabled_filters">Filters</string>
    <string name="stats_enabled_rules">Rules</string>
    <string name="stats_update_time">Updated:</string>
    <string name="filterVersionTemplate">Version {0}.</string>
    <string name="filterUpdatedTemplate">Updated {0} at {1}.</string>
    <!--About Adguard-->
    <string name="versionInfoTextViewText">Version {0}</string>
    <string name="copyrightInfoTextViewText">© 2009–2018. Adguard Software Ltd.\nAll Rights Reserved.</string>
    <string name="rateAdguardButtonText">Rate AdGuard</string>
    <string name="officialSiteLabelText">Official site</string>
    <string name="forumLabelText">Forum</string>
    <string name="install_browsers">You have no supported browsers installed! You can install them from Google Play:</string>
    <string name="install_samsung_browser">Install Samsung Internet Browser</string>
    <string name="install_yandex_browser">Install Yandex Browser</string>
    <string name="issuesButtonText">Report Bug</string>
    <string name="githubLabelText">Source code</string>
    <string name="copyrightMessage">AdGuard Content Blocker is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
    <string name="warning">Warning</string>
    <string name="onboarding_title1">Welcome!</string>
    <string name="onboarding_text1">You are only a couple steps away from a fast and clean internet, without ads.</string>
    <string name="onboarding_button_text1">Get started</string>
    <string name="onboarding_title2">Select a browser</string>
    <string name="onboarding_text2">To operate, AdGuard needs a browser that supports ad-blocking technology. Currently, there are two such browsers.</string>
    <string name="onboarding_button_text2">Select browser</string>
    <string name="onboarding_title3">Almost there!</string>
    <string name="onboarding_text3">An appropriate browser was found. All that\'s left is enabling AdGuard in its settings.</string>
    <string name="onboarding_button_text3">Enable AdGuard</string>
    <string name="count">Count</string>
    <string name="check_filter_updates">Check for filter updates</string>
    <string name="go_to_filters">Go to filters</string>
    <string name="install">Install</string>
    <string name="start">Start</string>
    <string name="get_started">Get started</string>
    <string name="adguard_conditions_title">Two conditions have to be met for AdGuard to work:</string>
    <string name="adguard_conditions_list1">You need to use a browser that supports content-blocking technology.</string>
    <string name="adguard_conditions_list2">AdGuard must be enabled in that browser\'s content-blocking settings.</string>
    <string name="choose_browser">Choose browser</string>
    <string name="enable_adguard">Enable AdGuard</string>
    <string name="main_activity_adguard_info">AdGuard blocks ads, protects your privacy, boosts page loading speeds, and reduces your mobile data usage.</string>
    <string name="exit">Exit</string>
    <string name="user_filter">User Filter</string>
    <string name="enter_rule_text">Enter rule text</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="emptyUserfilterTextViewText">The user filter is empty</string>
    <string name="addUserRuleButtonText">Add rule</string>
    <string name="importUserRulesButtonText">Import</string>
    <string name="importUserRulesDialogTitle">Enter URL or path to file</string>
    <string name="importUserRulesUrlErrorMessage">The URL is not valid</string>
    <string name="clearUserRulesButtonText">Remove all</string>
    <string name="browseButtonText">Browse</string>
    <string name="reportBug">Report a bug</string>
    <string name="description_about_other_adguard_product">Do you know that you can use AdGuard on any device, computer, and OS? Learn more on our website.</string>
    <string name="no_thanks">No Thanks</string>
    <string name="learn_more">Learn More</string>
    <string name="privacyPolicyLinkText">Privacy Policy</string>
    <string name="eulaLinkText">EULA</string>
    <string name="delete">Delete</string>
    <string name="confirmClearUserFilterMessage">Are you sure you want to clear the user filter? This operation cannot be undone.</string>
    <string name="confirmRemoveUserRuleMessage">Are you sure you want to delete this rule? This operation cannot be undone.</string>
    <string name="clear_filters_cache_title">Clear the filter cache</string>
    <string name="clear_filters_cache_summary">Clears filters cache and updates the filters</string>
    <string name="clear_filters_cache_progress_message">Clearing cache and updating filters</string>
    <string name="whitelist_title">Whitelist</string>
    <string name="addToWhitelistButtonText">Add website</string>
    <string name="clearWhitelistButtonText">Remove all</string>
    <string name="whitelistNewItemDialogTitle">Enter domain name</string>
    <string name="whitelistNewItemErrorMessage">The domain name is not valid</string>
    <string name="whitelistNewItemExistsErrorMessage">This domain is already in the whitelist</string>
    <string name="whitelistNewItemDialogHint">example.com</string>
    <string name="confirmClearWhitelistMessage">Are you sure you want to clear the whitelist? This operation cannot be undone.</string>
    <string name="confirmRemoveWhitelistDomainMessage">Are you sure you want to delete this domain? This operation cannot be undone.</string>
    <string name="emptyWhitelistTextViewText">The whitelist is empty</string>
    <string name="list_bullet" translatable="false">•</string>
    <string name="userRuleNewItemDialogHint" translatable="false">||example.com^$third-party</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="title_activity_onboarding" translatable="false">Welcome!</string>
    <string name="yandex_browser" translatable="false">Yandex Browser</string>
    <string name="yandex_developer" translatable="false">Yandex</string>
    <string name="yandex_browser_rating" translatable="false">4,5</string>
    <string name="samsung_browser" translatable="false">Samsung Internet Browser</string>
    <string name="samsung_developer" translatable="false">Samsung Electronics Co., Ltd.</string>
    <string name="samsung_browser_rating" translatable="false">4,4</string>
    <string name="closed_drawer_title" translatable="false">AdGuard Content Blocker</string>
    <string name="empty" translatable="false"></string>
    <string name="githubLink" translatable="false">github.com</string>
    <string name="adguardComLink" translatable="false">adguard.com</string>
    <string name="forumAdguardComLink" translatable="false">forum.adguard.com</string>
    <string name="report_dialog_title">Report type</string>
    <string name="reportTypeMissedAd">Missed Ad or tracker</string>
    <string name="reportTypeIncorrectBlocking">Incorrect blocking</string>
    <string name="reportTypeBugReport">Bug report</string>
    <string name="reportTypeFeatureRequest">Feature request</string>
    <string name="reportTypeCustom">Other</string>
    <string name="too_many_filters_warning">You have selected too many filter subscriptions. This might slow down your web browsing significantly.</string>
    <string name="overwrite_existing_rules">Overwrite existing rules</string>
    <string name="other_product_message">This app works in Samsung and Yandex browsers only. Not quite what you need? Check out other AdGuard products on our website</string>
    <string name="go_to_products">Go to Products</string>
    <string name="star_symbols" translatable="false">★</string>
</resources>