<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/user_filter_add"
            android:title="@string/addUserRuleButtonText"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_new"/>

    <item
            android:id="@+id/user_filter_import"
            android:title="@string/importUserRulesButtonText"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_add_to_queue"/>

    <item
            android:id="@+id/user_filter_clear"
            android:title="@string/clearUserRulesButtonText"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_discard"/>
</menu>