<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/samsung_card"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/cardview_horizontal_padding"
            android:paddingRight="@dimen/cardview_horizontal_padding"
            android:paddingTop="@dimen/cardview_vertical_padding">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samsung_browser"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/samsung_developer"
                    android:textColor="@color/secondaryText"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/samsung_browser_rating"
                        android:textColor="@color/primaryText"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@string/star_symbols"
                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_samsung_browser" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/install_samsung_browser"
                style="@style/Widget.AppCompat.Button.Borderless.CardView"
                android:text="@string/install"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/setting_adguard_samsung"
                style="@style/Widget.AppCompat.Button.Borderless.CardView"
                android:text="@string/settings"
                android:textColor="@color/primaryText" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>