<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_about_other_adguard_product"
            android:textColor="@color/common_text"
            android:textSize="@dimen/labelTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/no_thanks"
            style="@style/transparentButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:text="@string/no_thanks" />

        <Button
            android:id="@+id/learn_more"
            style="@style/smallGreenButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/learn_more" />
    </LinearLayout>
</LinearLayout>